--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
 	"author": "Bruno Peralva <brunoperalva@hotmail.com>",
 	"bugs": {
-		"url": "https://github.com/peralva/npm-template/issues"
+		"url": "https://github.com/peralva/npm-jamef/issues"
 	},
-	"description": "Template",
+	"dependencies": {
+		"@peralva/services": "^1.0.0"
+	},
+	"description": "Jamef",
 	"devDependencies": {
 		"@eslint/js": "^9.22.0",
 		"@peralva/prettier-config": "^1.0.15",
@@ -32,22 +35,22 @@
 		"lib/index.js",
 		"lib/index.mjs"
 	],
-	"homepage": "https://github.com/peralva/npm-template#readme",
+	"homepage": "https://github.com/peralva/npm-jamef#readme",
 	"keywords": [
-		"npm",
-		"template"
+		"jamef",
+		"sdk"
 	],
 	"license": "MIT",
 	"main": "lib/index.js",
 	"module": "lib/index.mjs",
-	"name": "@peralva/template",
+	"name": "jamef",
 	"prettier": "@peralva/prettier-config",
 	"publishConfig": {
 		"access": "public"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/peralva/npm-template.git"
+		"url": "git+https://github.com/peralva/npm-jamef.git"
 	},
 	"scripts": {
 		"build": "rollup --config",
@@ -56,5 +59,5 @@
 		"start": "node --enable-source-maps --inspect --trace-warnings --watch dist",
 		"test": "node --test dist"
 	},
-	"version": "0.0.0"
+	"version": "1.0.0"
 }
